BusOne/src/objects/Account_Merge_History_vod__c.object
<CustomObject>
    <description>This object contains a list of merged accounts.</description>
    <fields>
        <fullName>Account_PersonContactId_vod__c</fullName>
        <description>During an account merge the losing Account Person Contact ID is stored in this field.</description>
        <label>Account Person ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>Lookup to the winning merged Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Merge Historys</relationshipLabel>
        <relationshipName>Account_Merge_Historys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PersonContactId_vod__c</fullName>
        <description>During an account merge the losing Person Contact ID is stored in this field.</description>
        <label>PersonContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Account Merge History</label>
    <nameField>
        <label>Account Merge History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Merge Historys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>